# service-flow

./: .gitignore  README.md  config.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
doc/: plan.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  config.rs  database.rs  healthcheck.rs  main.rs  orchestrator.rs  process.rs  web.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/applications/: loading.tsx  page.tsx
src/app/dependencies/: page.tsx
src/app/groups/: loading.tsx  page.tsx
src/app/health/: page.tsx
src/app/login/: page.tsx
src/app/logs/: page.tsx
src/app/services/: page.tsx
src/app/settings/: page.tsx
src/components/: add-dependency-dialog.tsx  app-sidebar.tsx  create-application-dialog.tsx  create-group-dialog.tsx  create-health-check-dialog.tsx  create-service-dialog.tsx  dependency-graph.tsx  dependency-list.tsx  dependency-manager.tsx  edit-dependency-dialog.tsx  export-config-dialog.tsx  global-search.tsx  keyboard-shortcuts-dialog.tsx  keyboard-shortcuts-provider.tsx  notification-toast.tsx  page-header.tsx  service-group-card.tsx  service-table.tsx  service-templates-dialog.tsx  sidebar-context.tsx  theme-toggle.tsx
src/components/ui/: input.tsx  textarea.tsx
src/hooks/: use-config.ts  use-logs.ts  use-service-status.ts
src/lib/: api.ts  config-validator.ts  mock-data.ts
src/types/: service.ts  template.ts
